demogateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: wenote-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "<namespace>.myvpc-cluster-229227-3f79415bb8322da1a1df506dd4dd1054-0000.us-south.containers.appdomain.cloud"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: wenote
spec:
  hosts:
  - "*"
  gateways:
  - wenote-gateway
  http:
  - match:
    - uri:
        prefix: /v1/api/demo
    route:
    - destination:
        host: demologin
        port:
          number: 8080
