sdgsocialDestination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: demologin
spec:
  host: demologin
  subsets:
  - name: v1
    labels:
      version: v1
---
